# accmotion

./: .gitignore  Cargo.toml  README.md
certs/: cert.pem  key.pem
src/: main.rs  tui.rs
static/: index.html  script.js
