[package]
name = "accmo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http2"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"
ratatui = "0.26"
crossterm = "0.27"
ringbuffer = "0.15"
